--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+
+/* SETUP */
+
 * {
     margin: 0;
     padding: 0;
@@ -20,6 +23,9 @@ body {
     background-color: var(--pale);
     scroll-behavior: smooth;
 }
+
+
+/* NAVBAR */
 
 .nav {
     display: flex;
@@ -60,6 +66,11 @@ body {
     transform: translateX(3px);
 }
 
+
+/* 
+    HERO 
+*/
+
 .hero {
     background-image: url('./images/pizza_hero.jpg');
     background-size: cover;
@@ -78,6 +89,11 @@ body {
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
+
+
+/* 
+    ABOUT SECTION 
+*/
 
 .about {
     border-top: .7rem solid var(--primoRed);
@@ -127,6 +143,11 @@ body {
     line-height: 3rem;
 }
 
+
+/*
+    MENU SECTION
+*/
+
 .menu {
     background-color: var(--pale-dark);
     display: flex;
@@ -149,7 +170,7 @@ body {
 }
 
 .menu-nav {
-    width: 8vw;
+    width: 10vw;
     background-color: var(--pale);
     margin: 10rem 3rem;
     padding: 0rem 0;
@@ -157,11 +178,12 @@ body {
     border-radius: 2rem;
     display:flex;
     flex-direction:column;
-        position: -webkit-sticky;
+    position: -webkit-sticky;
     position: sticky;
     top: 12rem;
     bottom: 10rem;
     right: 3rem;
+    overflow: hidden;
     z-index: 1;
 }
 
@@ -185,6 +207,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 0 10vw 0 10vw;
+    margin-top: 5rem;
 }
 
 .pizzas {
@@ -234,6 +257,11 @@ body {
     color: var(--notBlack);
 }
 
+
+/*
+    CONTACT SECTION 
+*/
+
 .location {
     height: 30vh;
 }
@@ -256,8 +284,7 @@ body {
 .mapContainer {
     display: flex;
     justify-content: space-around;
-
-    margin: 3rem 15vw;
+    margin: 6rem 15vw;
 }
 
 #mapid {
@@ -266,7 +293,8 @@ body {
 }
 
 .location-details {
-    margin: 3rem;
+    margin: 0 3rem;
+    justify-items: flex-start;
 }
 
 .detail-chunk {
@@ -274,7 +302,7 @@ body {
 }
 
 .location-heading {
-    font-size: 4.5rem;
+    font-size: 4rem;
     font-family: 'Concert One', sans-serif;
     color: var(--primoRed);
 }
@@ -282,3 +310,84 @@ body {
 .address {
     font-size: 2.5rem;
 }
+
+
+/* MEDIA QUERIES */
+  
+  /* 
+    ##Device = Laptops, Desktops
+    ##Screen = 1025px to 1280px
+  */
+  @media screen and (min-width: 1025px) and (max-width: 1280px) {
+    
+    .menu-nav {
+        margin: 10rem 3rem;
+        align-items: center;
+        top: 12rem;
+        bottom: 10rem;
+        right: 3rem;
+        overflow: hidden;
+    }
+    
+    .menu-filter {
+        width: 100%;
+        border-radius: 0rem;
+    }
+    
+    .menu-section {
+        padding: 0 10vw 0 10vw;
+    }
+
+    .pizzas {
+        margin-top: -30rem;
+    }
+
+    .address {
+        font-size: 2rem;
+    }
+
+  }
+  
+  /* 
+    ##Device = Tablets, Ipads (portrait)
+    ##Screen = 768px to 1024px
+  */
+  
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    
+ 
+    
+  }
+  
+  /* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+  
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    
+
+    
+  }
+  
+  /* 
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+  
+  @media (min-width: 481px) and (max-width: 767px) {
+    
+  
+    
+  }
+  
+  /* 
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+  */
+  
+  @media (min-width: 320px) and (max-width: 480px) {
+    
+ 
+    
+  }
