--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ body {
 */
 
 .hero {
-    background-image: url('./images/pizza_hero.jpg');
+    background-image: url('./images/pizza_hero_1920.jpg');
     background-size: cover;
     background-color:transparent;
     background-attachment: fixed;
