--- a/styles.css
+++ b/styles.css
@@ -725,7 +725,7 @@ body {
     }
     
     .hero {
-        background-size: auto 100%;
+        background-attachment: scroll;
     }
 
     .hero-text {
