--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
     padding: 0;
     position: fixed;
     background-color: var(--pale);
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1);
     width: 100%;
     z-index: 2;
 }
@@ -61,6 +62,35 @@ body {
 .nav-option:hover {
     color: var(--primoRed);
     transform: translate(0, -3px);
+}
+
+#menuOption {
+    z-index: 100;
+}
+
+.subMenu {
+    display: none;
+}
+
+.subMenu-open {
+    position: absolute;
+    right: 15rem;
+    top: 5rem;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    background-color: var(--pale);
+}
+
+.subMenu-option {
+    text-decoration: none;
+    color: var(--notGray);
+    font-size: 3rem;
+    margin-top: 1rem;
+}
+
+.subMenu-option:hover {
+    color: var(--primoRed);
 }
 
 .burger-container {
@@ -211,6 +241,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04);
     font-family: 'Concert One', sans-serif;
     font-size: 8rem;
     color: var(--pale);
@@ -321,9 +352,11 @@ body {
     background-attachment: fixed;
     background-position: center;
     height: 30vh;
+    padding: 0 5vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04);
     font-family: 'Concert One', sans-serif;
     font-size: 8rem;
     color: var(--pale);
@@ -339,6 +372,7 @@ body {
 #mapid {
     height: 60vh;
     width: 60vh;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -2px rgba(0, 0, 0, .05);
 }
 
 .location-details {
@@ -425,17 +459,17 @@ body {
         bottom: 10rem;
         right: 3rem;
         overflow: hidden;
-        
+    }
+
+    .menu-filter {
+        width: 100%;
+        border-radius: 0rem;
     }
 
     .burger-container {
         display: none;
     }
     
-    .menu-filter {
-        width: 100%;
-        border-radius: 0rem;
-    }
     
     .menu-section {
         padding: 0 10vw 0 10vw;
@@ -519,6 +553,20 @@ body {
         margin-bottom: 5rem;
     }
 
+    .menu-nav {
+        margin: 10rem 3rem;
+        align-items: center;
+        top: 12rem;
+        bottom: 10rem;
+        right: 3rem;
+        overflow: hidden;
+    }
+
+    .menu-filter {
+        width: 100%;
+        border-radius: 0rem;
+    }
+
     .mapContainer {
         flex-direction: column;
         align-items: center;
@@ -588,6 +636,10 @@ body {
         font-family: 'Concert One', 'Roboto', sans-serif;
         font-size: 3rem;
         margin: 0;
+    }
+
+    .hero {
+        background-attachment: scroll;
     }
 
     .hero-text {
