--- a/styles.css
+++ b/styles.css
@@ -506,6 +506,10 @@ body {
         margin: 0;
     }
 
+    .hero {
+        background-attachment: scroll;
+    }
+
     .hero-text {
         font-size: 5rem;
     }
@@ -521,6 +525,10 @@ body {
     .about-feature {
         max-width: 50vw;
         margin-bottom: 5rem;
+    }
+
+    .menu-title {
+        background-attachment: scroll
     }
 
     .menu-nav {
@@ -552,6 +560,10 @@ body {
         flex-basis: 50%;
         max-width: 70%;
         text-align: center;
+    }
+
+    .location-title {
+        background-attachment: scroll;
     }
 
     .mapContainer {
