--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,12 @@
     --pale-dark: rgb(214, 208, 197);
     --notBlack: rgb(51, 40, 35);
     --notGray: rgb(61, 50, 44);
+    --blueAccent: rgb(12, 150, 237);
 }
 
 html {
     font-size: 10px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     color: var(--notBlack);
 }
 
@@ -36,12 +37,12 @@ body {
     background-color: var(--pale);
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1);
     width: 100%;
-    z-index: 2;
+    z-index: 10;
 }
 
 .title {
-    font-family: 'Concert One', sans-serif;
-    font-size: 6.5rem;
+    font-family: 'Fugaz One';
+    font-size: 5.5rem;
     color: var(--primoRed);
     text-decoration: none;
     margin-left: 3rem;
@@ -74,7 +75,7 @@ body {
 
 .subMenu-open {
     position: absolute;
-    right: 15rem;
+    right: 9.5rem;
     top: 5rem;
     display: flex;
     flex-direction: column;
@@ -163,7 +164,7 @@ body {
     font-size: 6rem;
     color: var(--pale);
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -177,7 +178,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     background-color: var(--pale-dark);
 }
 
@@ -209,7 +210,7 @@ body {
 
 .about-feature h3 {
     margin-bottom: 1.5rem;
-    font-family: 'Concert One', sans-serif;
+    font-family: 'Fugaz One', sans-serif;
     font-size: 5rem;
     text-align: center;
     color: var(--primoRed);
@@ -242,7 +243,7 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04);
-    font-family: 'Concert One', sans-serif;
+    font-family: 'Fugaz One', sans-serif;
     font-size: 8rem;
     color: var(--pale);
     text-align: center;
@@ -268,7 +269,7 @@ body {
 
 
 .section-title {
-    font-family: 'Concert One', sans-serif;
+    font-family: 'Fugaz One', sans-serif;
     font-size: 5rem;
     color: var(--primoRed);
 }
@@ -300,7 +301,7 @@ body {
 }
 
 .item-description {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 2rem;
     color: var(--notBlack);
 }
@@ -326,7 +327,7 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1), 0 10px 10px -5px rgba(0, 0, 0, .04);
-    font-family: 'Concert One', sans-serif;
+    font-family: 'Fugaz One', sans-serif;
     font-size: 8rem;
     color: var(--pale);
     text-align: center;
@@ -353,9 +354,17 @@ body {
     margin-bottom: 3rem;
 }
 
+.detail-chunk a {
+    color: var(--blueAccent);
+}
+
+.detail-chunk a:visited {
+    color: var(--blueAccent);
+}
+
 .location-heading {
     font-size: 4rem;
-    font-family: 'Concert One', sans-serif;
+    font-family: 'Fugaz One', sans-serif;
     color: var(--primoRed);
 }
 
@@ -496,16 +505,18 @@ body {
         background-color: var(--primoRed);
         transition: all .25s ease-in;
         animation: sidebarSlideIn .3s ease-in-out;
-        
     }
 
     .sidebar .nav-option {
         color: var(--pale-dark);
-        font-family: 'Concert One', 'Roboto', sans-serif;
+        font-family: 'Fugaz One', 'Roboto Condensed', sans-serif;
         font-size: 3rem;
         margin: 0;
     }
 
+    .subMenu-open {
+        display: none;
+    }
     .hero {
         background-attachment: scroll;
     }
@@ -637,7 +648,7 @@ body {
 
     .sidebar .nav-option {
         color: var(--pale-dark);
-        font-family: 'Concert One', 'Roboto', sans-serif;
+        font-family: 'Fugaz One', 'Roboto Condensed', sans-serif;
         font-size: 3rem;
         margin: 0;
     }
@@ -677,7 +688,7 @@ body {
         top: 9rem;
         bottom: 9rem;
         overflow: hidden;
-        z-index: 1;
+        z-index: 199;
     }
 
     .menu-filter {
@@ -801,7 +812,7 @@ body {
     
     .nav-option {
         color: var(--pale-dark);
-        font-family: 'Concert One', 'Roboto', sans-serif;
+        font-family: 'Fugaz One', 'Roboto Condensed', sans-serif;
         font-size: 3rem;
         margin: 0;
     }
